# SQLAlchemy_basics

./: config.py  crud.py  main.py  pyproject.toml
models/: __init__.py  base.py  post.py  user.py
