[tool.poetry]
name = "sqla-2-0"
version = "0.1.0"
description = ""
authors = ["Oleg Yanzorkin <93434657+OlegMXX@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
sqlalchemy = "^2.0.36"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
